landing page layout

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -57,6 +57,33 @@
     </div>
 </nav>
 
+<div class="container">
+<div class="d-grid gap-2 col-6 mx-auto">
+    <button class="btn btn-primary" type="button">Whats for breakfast?</button>
+    <button class="btn btn-primary" type="button">Whats for lunch?</button>
+    <button class="btn btn-primary" type="button">Whats for dinner?</button>
+    <button class="btn btn-primary" type="button">Take-out</button>
+    <button class="btn btn-primary" type="button">Secret Ingredients</button>
+    <button class="btn btn-primary" type="button">Family Favorites</button>
+    <button class="btn btn-primary" type="button">You're eating what?!</button>
+</div>
+
+</div>
+
+
+
+
+<div class="container" >
+<form>
+    <div class="mb-3" >
+        <label for="exampleInputEmail1" class="form-label">Whats on your plate?</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text"></div>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+</div>
+
 
 
 
