--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -16,6 +16,7 @@
 
 
 <body>
+    <!-- navbar -->
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">feddit</a>
@@ -27,27 +28,62 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item d-flex">
                 <li class="nav-item">
-                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome back!"
-                        data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom" >Sign in</button>
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                            data-bs-auto-close="outside">
+                            Log In
+                        </button>
+                        <form class="dropdown-menu p-4">
+                            <div class="mb-3">
+                                <label for="exampleDropdownFormEmail2" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="email@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleDropdownFormPassword2" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                                    <label class="form-check-label" for="dropdownCheck2">
+                                        Remember me
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                        </form>
+                    </div>
+                    <!-- <button id="signin" type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome back!"
+                        data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom" >Sign in</button> -->
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome!" data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom">Log In</button>
+                    <!-- <button type="button" class="btn btn-outline-primary" data-bs-toggle="popover" data-bs-title="Welcome!" data-bs-content="And here's some amazing content. It's very engaging. Right?" data-bs-placement="bottom">Log In</button> -->
+                    <div class="dropdown">
+                        <button type="button" class="btn btn-outline-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"
+                            data-bs-auto-close="outside">
+                            Sign Up
+                        </button>
+                        <form class="dropdown-menu p-4">
+                            <div class="mb-3">
+                                <label for="exampleDropdownFormEmail2" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="email@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleDropdownFormPassword2" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                                    <label class="form-check-label" for="dropdownCheck2">
+                                        Remember me
+                                    </label>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                        </form>
+                    </div>
                 </li>
-
-                <!-- <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li> -->
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search feddit" aria-label="Search">
@@ -56,21 +92,17 @@
         </div>
     </div>
 </nav>
+<!-- /navbar -->
 
 <div class="container">
 <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button">Whats for breakfast?</button>
-    <button class="btn btn-primary" type="button">Whats for lunch?</button>
-    <button class="btn btn-primary" type="button">Whats for dinner?</button>
+    <button class="btn btn-primary" type="button">Home Cooking</button>
+    <button class="btn btn-primary" type="button">Favorite Restaurants</button>
     <button class="btn btn-primary" type="button">Take-out</button>
     <button class="btn btn-primary" type="button">Secret Ingredients</button>
     <button class="btn btn-primary" type="button">Family Favorites</button>
     <button class="btn btn-primary" type="button">You're eating what?!</button>
 </div>
-
-</div>
-
-
 
 
 <div class="container" >
@@ -86,13 +118,16 @@
 
 
 
-
 </body>
+
 
 <script>
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
         const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+        
 </script>
+
+
 
 
 
