--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -16,7 +16,7 @@
 
 
 <body>
-    <!-- navbar -->
+    <!-- navbar 1-->
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">feddit</a>
